finished writing the proposal

--- a/notebooks/elasticsearch.ipynb
+++ b/notebooks/elasticsearch.ipynb
@@ -2,13 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "initial_id",
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2023-11-28T09:59:21.483026Z",
-     "start_time": "2023-11-28T09:59:21.475188Z"
+     "end_time": "2023-11-30T14:44:24.852162Z",
+     "start_time": "2023-11-30T14:44:24.850615Z"
     }
    },
    "outputs": [],
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "outputs": [],
    "source": [
     "urllib3.disable_warnings()\n",
@@ -40,8 +40,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-28T09:59:21.746527Z",
-     "start_time": "2023-11-28T09:59:21.742328Z"
+     "end_time": "2023-11-30T14:44:24.859504Z",
+     "start_time": "2023-11-30T14:44:24.852405Z"
     }
    },
    "id": "8bee4ed33bfd4de2"
@@ -63,13 +63,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "outputs": [
     {
      "data": {
       "text/plain": "{'name': '1bb166804bb3',\n 'cluster_name': 'docker-cluster',\n 'cluster_uuid': 'm81m9H08RKigCdwIje8C6w',\n 'version': {'number': '8.11.0',\n  'build_flavor': 'default',\n  'build_type': 'docker',\n  'build_hash': 'd9ec3fa628c7b0ba3d25692e277ba26814820b20',\n  'build_date': '2023-11-04T10:04:57.184859352Z',\n  'build_snapshot': False,\n  'lucene_version': '9.8.0',\n  'minimum_wire_compatibility_version': '7.17.0',\n  'minimum_index_compatibility_version': '7.0.0'},\n 'tagline': 'You Know, for Search'}"
      },
-     "execution_count": 8,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -80,21 +80,21 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-28T09:59:22.654372Z",
-     "start_time": "2023-11-28T09:59:22.505731Z"
+     "end_time": "2023-11-30T14:44:24.950930Z",
+     "start_time": "2023-11-30T14:44:24.863451Z"
     }
    },
    "id": "7bd73deffbc91e05"
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 3996/3996 [00:12<00:00, 318.92it/s]\n"
+      "100%|██████████| 3996/3996 [00:13<00:00, 304.24it/s]\n"
      ]
     }
    ],
@@ -102,6 +102,7 @@
     "specs = []\n",
     "specs_names = []\n",
     "specs_versions = []\n",
+    "specs_categories = []\n",
     "\n",
     "tar = tarfile.open('../data/data.tar.gz', 'r:gz')\n",
     "nl_tags = r'(?:\\'|\\\")(?:description|name|title|summary)(?:\\'|\\\"):\\s(?:\\'|\\\")([^\\'\\\"]+)(?:\\'|\\\")'\n",
@@ -116,14 +117,19 @@
     "            specs_names.append(contents['info']['title'])\n",
     "            specs_versions.append(contents['info']['version'] if not contents['info']['version'].startswith('v') else contents['info']['version'][1:])\n",
     "            specs.append(' '.join(re.findall(nl_tags, str(contents))))\n",
+    "            \n",
+    "            try:\n",
+    "                specs_categories.append(contents['info']['x-apisguru-categories'][0])\n",
+    "            except KeyError:\n",
+    "                specs_categories.append('none')\n",
     "        except json.JSONDecodeError:\n",
     "            continue"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-16T15:30:59.020131Z",
-     "start_time": "2023-11-16T15:30:45.156304Z"
+     "end_time": "2023-11-30T14:49:17.647908Z",
+     "start_time": "2023-11-30T14:49:03.183333Z"
     }
    },
    "id": "666bb89fcbea3db8"
@@ -165,8 +171,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
+   "execution_count": 16,
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 3992/3992 [00:38<00:00, 104.07it/s]\n"
+     ]
+    }
+   ],
    "source": [
     "es.indices.create(\n",
     "    index='oa-specifications',\n",
@@ -182,6 +196,9 @@
     "                },\n",
     "                \"version\" : {\n",
     "                    \"type\" : \"keyword\"\n",
+    "                },\n",
+    "                \"category\" : {\n",
+    "                    \"type\" : \"keyword\"\n",
     "                }\n",
     "            }\n",
     "        }\n",
@@ -194,6 +211,7 @@
     "        body={\n",
     "            'name': specs_names[ind],\n",
     "            'version': specs_versions[ind],\n",
+    "            'category': specs_categories[ind],\n",
     "            'document_vector': session.run(embeddings, feed_dict={text_ph: [specs[ind]]}).tolist()[0]\n",
     "        }\n",
     "    )"
@@ -201,14 +219,15 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-11-13T01:05:38.131726Z"
+     "end_time": "2023-11-30T14:50:52.944776Z",
+     "start_time": "2023-11-30T14:50:14.483484Z"
     }
    },
    "id": "5df35510d5a812c5"
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 17,
    "outputs": [],
    "source": [
     "query = 'driving license registration service'\n",
@@ -227,15 +246,15 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-28T10:00:04.530133Z",
-     "start_time": "2023-11-28T10:00:04.489935Z"
+     "end_time": "2023-11-30T14:50:59.843979Z",
+     "start_time": "2023-11-30T14:50:59.746706Z"
     }
    },
    "id": "daa00fc4dd046b6e"
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 18,
    "outputs": [
     {
      "name": "stdout",
@@ -263,8 +282,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-28T10:00:04.732922Z",
-     "start_time": "2023-11-28T10:00:04.729541Z"
+     "end_time": "2023-11-30T14:51:01.213750Z",
+     "start_time": "2023-11-30T14:51:01.205475Z"
     }
    },
    "id": "7714a586e10ecff7"
