--- a/proposal/bibliography/bibliography.bib
+++ b/proposal/bibliography/bibliography.bib
@@ -132,3 +132,110 @@
 	keywords = {Meta-visualization, Neighbor embedding, Nonlinear dimensionality reduction},
 	pages = {189--229},
 }
+
+@article{ma_restful_2023,
+	title = {{RESTful} {API} {Analysis}, {Recommendation}, and {Client} {Code} {Retrieval}},
+	volume = {12},
+	copyright = {http://creativecommons.org/licenses/by/3.0/},
+	issn = {2079-9292},
+	url = {https://www.mdpi.com/2079-9292/12/5/1252},
+	doi = {10.3390/electronics12051252},
+	abstract = {Numerous companies create innovative software systems using Web APIs (Application Programming Interfaces). API search engines and API directory services, such as ProgrammableWeb, Rapid API Hub, APIs.guru, and API Harmony, have been developed to facilitate the utilization of various APIs. Unfortunately, most API systems provide only superficial support, with no assistance in obtaining relevant APIs or examples of code usage. To better realize the “FAIR” (Findability, Accessibility, Interoperability, and Reusability) features for the usage of Web APIs, in this study, we developed an API inspection system (referred to as API Prober) to provide a new API directory service with multiple supplemental functionalities. To facilitate the findability and accessibility of APIs, API Prober transforms OAS (OpenAPI Specifications) into a graph structure and automatically annotates the semantic concepts using LDA (Latent Dirichlet Allocation) and WordNet. To enhance interoperability, API Prober also classifies APIs by clustering OAS documents and recommends alternative services to be substituted or merged with the target service. Finally, to support reusability, API Prober makes it possible to retrieve examples of API utilization code in Java by parsing source code in GitHub. The experimental results demonstrate the effectiveness of the API Prober in recommending relevant services and providing usage examples based on real-world client code. This research contributes to providing viable methods to appropriately analyze and cluster Web APIs, and recommend APIs and client code examples.},
+	language = {en},
+	number = {5},
+	urldate = {2023-12-01},
+	journal = {Electronics},
+	author = {Ma, Shang-Pin and Hsu, Ming-Jen and Chen, Hsiao-Jung and Lin, Chuan-Jie},
+	month = jan,
+	year = {2023},
+	note = {Number: 5
+Publisher: Multidisciplinary Digital Publishing Institute},
+	keywords = {cluster analysis, code example, GitHub, Latent Dirichlet Allocation, OpenAPI Specification, service recommendation},
+	pages = {1252},
+}
+
+@misc{moon_api-miner_2023,
+	title = {{API}-{Miner}: an {API}-to-{API} {Specification} {Recommendation} {Engine}},
+	shorttitle = {{API}-{Miner}},
+	url = {http://arxiv.org/abs/2212.07253},
+	abstract = {When designing a new API for a large project, developers need to make smart design choices so that their code base can grow sustainably. To ensure that new API components are well designed, developers can learn from existing API components. However, the lack of standardized methods for comparing API designs makes this learning process time-consuming and difficult. To address this gap we developed API-Miner, to the best of our knowledge, one of the first API-to-API specification recommendation engines. API-Miner retrieves relevant specification components written in OpenAPI (a widely adopted language used to describe web APIs). API-miner presents several significant contributions, including: (1) novel methods of processing and extracting key information from OpenAPI specifications, (2) innovative feature extraction techniques that are optimized for the highly technical API specification domain, and (3) a novel log-linear probabilistic model that combines multiple signals to retrieve relevant and high quality OpenAPI specification components given a query specification. We evaluate API-Miner in both quantitative and qualitative tasks and achieve an overall of 91.7\% recall@1 and 56.2\% F1, which surpasses baseline performance by 15.4\% in recall@1 and 3.2\% in F1. Overall, API-Miner will allow developers to retrieve relevant OpenAPI specification components from a public or internal database in the early stages of the API development cycle, so that they can learn from existing established examples and potentially identify redundancies in their work. It provides the guidance developers need to accelerate development process and contribute thoughtfully designed APIs that promote code maintainability and quality. Code is available on GitHub at https://github.com/jpmorganchase/api-miner.},
+	urldate = {2023-12-04},
+	publisher = {arXiv},
+	author = {Moon, Sae Young and Kerr, Gregor and Silavong, Fran and Moran, Sean},
+	month = jul,
+	year = {2023},
+	note = {arXiv:2212.07253 [cs]},
+	keywords = {Computer Science - Artificial Intelligence, Computer Science - Software Engineering},
+}
+
+@inproceedings{ma_api_2020,
+	address = {Cham},
+	series = {Lecture {Notes} on {Data} {Engineering} and {Communications} {Technologies}},
+	title = {{API} {Prober} – {A} {Tool} for {Analyzing} {Web} {API} {Features} and {Clustering} {Web} {APIs}},
+	isbn = {978-3-030-34986-8},
+	doi = {10.1007/978-3-030-34986-8_6},
+	abstract = {Nowadays, Web services attract more and more attentions. Many companies expose their data or services by publishing Web APIs (Application Programming Interface) to let users create innovative services or applications. To ease the use of various and complex APIs, multiple API directory services or API search engines, such as Mashape, API Harmony, and ProgrammableWeb, are emerging in recent years. However, most API systems are only able to help developers to understand Web APIs. Furthermore, these systems do neither provide usage examples for users, nor help users understand the “closeness” between APIs. Therefore, we propose a system, referred to as API Prober, to address the above issues by constructing an API “dictionary”. There are multiple main features of API Prober. First, API Prober transforms OAS (OpenAPI Specification 2.0) into the graph structure in Neo4J database and annotates the semantic concepts on each graph node by using LDA (Latent Dirichlet Allocation) and WordNet. Second, by parsing source codes in the GitHub, API Prober is able to retrieve code examples that utilize APIs. Third, API Prober performs API classification through cluster analysis for OAS documents. Finally, the experimental results show that API Prober can appropriately produce service clusters.},
+	language = {en},
+	booktitle = {Advances in {E}-{Business} {Engineering} for {Ubiquitous} {Computing}},
+	publisher = {Springer International Publishing},
+	author = {Ma, Shang-Pin and Hsu, Ming-Jen and Chen, Hsiao-Jung and Su, Yu-Sheng},
+	editor = {Chao, Kuo-Ming and Jiang, Lihong and Hussain, Omar Khadeer and Ma, Shang-Pin and Fei, Xiang},
+	year = {2020},
+	keywords = {Cluster analysis, GitHub, Semantic annotation, Web API analysis},
+	pages = {81--96},
+}
+
+@inproceedings{kim_empirical_2019,
+	title = {An {Empirical} {Analysis} of {GraphQL} {API} {Schemas} in {Open} {Code} {Repositories} and {Package} {Registries}},
+	url = {https://www.semanticscholar.org/paper/An-Empirical-Analysis-of-GraphQL-API-Schemas-in-and-Kim-Consens/55985b1efb3ac3c8951c3e64337d5b743cd9cb1e},
+	abstract = {GraphQL is a query language for APIs that has been increasingly adopted by Web developers since its specification was open sourced in 2015. The GraphQL framework lets API clients tailor data requests by using queries that return JSON objects described using GraphQL Schema. We present initial results of an exploratory empirical study with the goal of characterizing GraphQL Schemas in open code repositories and package registries. Our first approach identifies over 20 thousand GraphQL-related projects in publicly accessible repositories hosted by GitHub. Our second, and complementary, approach uses package registries to find over 37 thousand dependent packages and repositories. In addition, over 2 thousand schema files were loaded into the GraphQL-JS reference implementation to conduct a detailed analysis of the schema information. Our study provides insights into the usage of different schema constructs, the number of distinct types and the most popular types in schemas, as well as the presence of cycles in schemas. 1 Motivation and Approach The schema of a GraphQL API describes the data and the types of queries supported by the API. An empirical study of the GraphQL schemas used by open source projects, therefore, provides useful information about the characteristics of data interfaces. Currently, there is no comprehensive collection of such schemas or a tool that helps gather schemas from GraphQL APIs. The goal of the work presented in this paper is i) to establish a method to extract schemas into a single collection for analyses and ii) to conduct an empirical analysis of the schemas. 1.1 Data Collection Method APIs-guru has the most comprehensive list of public GraphQL APIs with links to endpoints and their documentation. By using APIs-guru, combined with manual effort through keyword searching, we collected 67 schemas of distinct APIs. Authentication requirements for most publicly available APIs hindered the efficiency and possible automation of schema extraction. Hence, we decided to take a different approach by extracting schemas from open source repositories from GitHub and used three sources to identify GraphQL repositories.},
+	urldate = {2023-12-04},
+	author = {Kim, Yun Wan and Consens, M. and Hartig, O.},
+	year = {2019},
+}
+
+@inproceedings{yang_towards_2018,
+	address = {New York, NY, USA},
+	series = {{MSR} '18},
+	title = {Towards extracting web {API} specifications from documentation},
+	isbn = {978-1-4503-5716-6},
+	url = {https://doi.org/10.1145/3196398.3196411},
+	doi = {10.1145/3196398.3196411},
+	abstract = {Web API specifications are machine-readable descriptions of APIs. These specifications, in combination with related tooling, simplify and support the consumption of APIs. However, despite the increased distribution of web APIs, specifications are rare and their creation and maintenance heavily rely on manual efforts by third parties. In this paper, we propose an automatic approach and an associated tool called D2Spec for extracting significant parts of such specifications from web API documentation pages. Given a seed online documentation page of an API, D2Spec first crawls all documentation pages on the API, and then uses a set of machine-learning techniques to extract the base URL, path templates, and HTTP methods - collectively describing the endpoints of the API. We evaluate whether D2Spec can accurately extract endpoints from documentation on 116 web APIs. The results show that D2Spec achieves a precision of 87.1\% in identifying base URLs, a precision of 80.3\% and a recall of 80.9\% in generating path templates, and a precision of 83.8\% and a recall of 77.2\% in extracting HTTP methods. In addition, in an evaluation on 64 APIs with pre-existing API specifications, D2Spec revealed many inconsistencies between web API documentation and their corresponding publicly available specifications. API consumers would benefit from D2Spec pointing them to, and allowing them thus to fix, such inconsistencies.},
+	urldate = {2023-12-04},
+	booktitle = {Proceedings of the 15th {International} {Conference} on {Mining} {Software} {Repositories}},
+	publisher = {Association for Computing Machinery},
+	author = {Yang, Jinqiu and Wittern, Erik and Ying, Annie T. T. and Dolby, Julian and Tan, Lin},
+	month = may,
+	year = {2018},
+	pages = {454--464},
+}
+
+@misc{tsai_rest_2021,
+	title = {{REST} {API} {Fuzzing} by {Coverage} {Level} {Guided} {Blackbox} {Testing}},
+	url = {http://arxiv.org/abs/2112.15485},
+	doi = {10.48550/arXiv.2112.15485},
+	abstract = {With the growth of web applications, REST APIs have become the primary communication method between services. In order to ensure system reliability and security, software quality can be assured by effective testing methods. Black box fuzz testing is one of the effective methods to perform tests on a large scale. However, conventional black box fuzz testing generates random data without judging the quality of the input. We implement a black box fuzz testing method for REST APIs. It resolves the issues of blind mutations without knowing the effectiveness by Test Coverage Level feedback. We also enhance the mutation strategies by reducing the testing complexity for REST APIs, generating more appropriate test cases to cover possible paths. We evaluate our method by testing two large open-source projects and 89 bugs are reported and confirmed. In addition, we find 351 bugs from 64 remote API services in APIs.guru. The work is in https://github.com/iasthc/hsuan-fuzz.},
+	urldate = {2023-12-04},
+	publisher = {arXiv},
+	author = {Tsai, Chung-Hsuan and Tsai, Shi-Chun and Huang, Shih-Kun},
+	month = dec,
+	year = {2021},
+	note = {arXiv:2112.15485 [cs]},
+	keywords = {Computer Science - Software Engineering},
+}
+
+@misc{yasmin_first_2020,
+	title = {A {First} {Look} at the {Deprecation} of {RESTful} {APIs}: {An} {Empirical} {Study}},
+	shorttitle = {A {First} {Look} at the {Deprecation} of {RESTful} {APIs}},
+	url = {http://arxiv.org/abs/2008.12808},
+	doi = {10.48550/arXiv.2008.12808},
+	abstract = {REpresentational State Transfer (REST) is considered as one standard software architectural style to build web APIs that can integrate software systems over the internet. However, while connecting systems, RESTful APIs might also break the dependent applications that rely on their services when they introduce breaking changes, e.g., an older version of the API is no longer supported. To warn developers promptly and thus prevent critical impact on downstream applications, a deprecated-removed model should be followed, and deprecation-related information such as alternative approaches should also be listed. While API deprecation analysis as a theme is not new, most existing work focuses on non-web APIs, such as the ones provided by Java and Android. To investigate RESTful API deprecation, we propose a framework called RADA (RESTful API Deprecation Analyzer). RADA is capable of automatically identifying deprecated API elements and analyzing impacted operations from an OpenAPI specification, a machine-readable profile for describing RESTful web service. We apply RADA on 2,224 OpenAPI specifications of 1,368 RESTful APIs collected from APIs.guru, the largest directory of OpenAPI specifications. Based on the data mined by RADA, we perform an empirical study to investigate how the deprecated-removed protocol is followed in RESTful APIs and characterize practices in RESTful API deprecation. The results of our study reveal several severe deprecation-related problems in existing RESTful APIs. Our implementation of RADA and detailed empirical results are publicly available for future intelligent tools that could automatically identify and migrate usage of deprecated RESTful API operations in client code.},
+	urldate = {2023-12-04},
+	publisher = {arXiv},
+	author = {Yasmin, Jerin and Tian, Yuan and Yang, Jinqiu},
+	month = aug,
+	year = {2020},
+	note = {arXiv:2008.12808 [cs]},
+	keywords = {Computer Science - Software Engineering},
+}
