--- a/proposal/sections/feasibility-study/feasibility-study.tex
+++ b/proposal/sections/feasibility-study/feasibility-study.tex
@@ -1,2 +1,5 @@
 With the API Scout platform being a data aggregator for OpenAPI Specifications (section~\ref{subsec:openapi-specification}), we need a way of efficiently indexing and searching through the plethora of crawled documents in our database.
-The goal of this feasibility study is...
+The goal of this feasibility study is to have a better understanding of the technologies and algorithms to use during the development of the platform. \\ \\
+In the following sections, we will see an in-depth explanation on how the indexing and retrieval of documents will be implemented, as well as an evaluation of this solution on a test dataset.
+The dataset used in this study is composed of $\sim$3000 specifications taken from APIs.guru. 
+This dataset has been used in several other research papers on APIs~\cite{ma_restful_2023,kim_empirical_2019,tsai_rest_2021,yasmin_first_2020,moon_api-miner_2023,yang_towards_2018,ma_api_2020}.
