--- a/proposal/sections/feasibility-study/results.tex
+++ b/proposal/sections/feasibility-study/results.tex
@@ -1,7 +1,7 @@
 The results obtained with the embedding + K-NN solution are very promising, as we can see in the t-SNE plot (Figure~\ref{fig:tSNE-plot}, Subsection~\ref{subsec:t-sne-plots}).
 \begin{figure}
     \centering
-    \includegraphics[width=13cm]{../out/plots/SNE}
+    \includegraphics[width=13cm]{/Users/edoriggio/Documents/USI/github/thesis/research/out/plots/SNE}
     \caption{t-SNE Plot}
     \label{fig:tSNE-plot}
 \end{figure}
