--- a/proposal/sections/introduction/introduction.tex
+++ b/proposal/sections/introduction/introduction.tex
@@ -4,7 +4,7 @@ Moreover, especially in the cases where these interfaces have to be used by exte
 In this thesis, we will work with a specific type of API: HTTP APIs\@.
 Such APIs are exposed by Web servers and accessible though HTTP requests.
 To properly document public HTTP APIs, Swagger proposed in 2011 the \("\)Swagger Specification\("\) (today known as \("\)OpenAPI Specification\("\)).
-As Swagger explains on its website, \("\)[t]he OpenAPI Specification (OAS) defines a standard, language-agnostic interface to HTTP APIs which allows both humans and computers to discover and understand the capabilities of the service [\dots].\("\)~\cite{swagger} \\ \\
+As Swagger explains on its website, \("\)[t]he OpenAPI Specification (OAS) defines a standard, language-agnostic interface to HTTP APIs which allows both humans and computers to discover and understand the capabilities of the service [\dots].\("\)~\cite{swagger_openapi_2021} \\ \\
 Every service with public endpoints, should expose -- as per Swagger's specifications -- a \verb|opena-| \\ \verb|pi.json| or \verb|openapi.yaml| file.
 This file can be one, or it can be the root of several other smaller files -- at the discretion of the author.
 Moreover, each document that specifies the endpoints' structure must be written following a specific set of rules.
